--- a/index.html
+++ b/index.html
@@ -3,47 +3,109 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Resume</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Student Resume - Bhargav</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      line-height: 1.6;
+      background-color: #f4f4f4;
+      color: #333;
+    }
+
+    header {
+      text-align: center;
+      background-color: #0077cc;
+      color: white;
+      padding: 30px 0;
+    }
+
+    header h1 {
+      margin: 0;
+    }
+
+    section {
+      max-width: 800px;
+      margin: 20px auto;
+      padding: 20px;
+      background-color: white;
+      border-radius: 10px;
+      box-shadow: 0 3px 6px rgba(0,0,0,0.1);
+    }
+
+    h2 {
+      color: #0077cc;
+      border-bottom: 2px solid #ddd;
+      padding-bottom: 5px;
+    }
+
+    ul {
+      list-style: none;
+      padding: 0;
+    }
+
+    li {
+      margin-bottom: 8px;
+    }
+
+    a {
+      color: #0077cc;
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+
+    footer {
+      text-align: center;
+      padding: 15px;
+      background-color: #0077cc;
+      color: white;
+      margin-top: 20px;
+    }
+  </style>
 </head>
 <body>
+
   <header>
     <h1>Bhargav</h1>
-    <p>Web Designer | Student</p>
+    <p>Computer Science Student | Web Designer</p>
   </header>
 
-  <section class="about">
+  <section>
     <h2>About Me</h2>
-    <p>I am a passionate Computer Science student with a focus on Web Design and Development. I love building creative, user-friendly websites and exploring new technologies.</p>
+    <p>Passionate Computer Science student with interest in web design and front-end development. I enjoy building clean, user-friendly websites and learning new technologies.</p>
   </section>
 
-  <section class="education">
+  <section>
     <h2>Education</h2>
     <ul>
-      <li><strong>B.Tech in Computer Science</strong> – XYZ University (2022–2026)</li>
-      <li><strong>High School</strong> – ABC School (2020–2022)</li>
+      <li>B.Tech in Computer Science – XYZ University (2022–2026)</li>
+      <li>High School – ABC School (2020–2022)</li>
     </ul>
   </section>
 
-  <section class="skills">
+  <section>
     <h2>Skills</h2>
     <ul>
       <li>HTML, CSS, JavaScript</li>
       <li>React, Node.js</li>
-      <li>MongoDB, Express</li>
       <li>UI/UX Design</li>
     </ul>
   </section>
 
-  <section class="projects">
+  <section>
     <h2>Projects</h2>
     <ul>
-      <li><strong>Portfolio Website:</strong> Designed a responsive personal portfolio.</li>
-      <li><strong>Accessibility Analyzer:</strong> Built a React dashboard to check WCAG compliance.</li>
+      <li>Portfolio Website – Responsive personal portfolio site.</li>
+      <li>Accessibility Analyzer – React dashboard to check website accessibility.</li>
+      <li>Fruit Shop Web App – Simple e-commerce front-end using HTML, CSS, JS.</li>
     </ul>
   </section>
 
-  <section class="contact">
+  <section>
     <h2>Contact</h2>
     <p>Email: <a href="mailto:bhargav@example.com">bhargav@example.com</a></p>
     <p>GitHub: <a href="https://github.com/YOUR-GITHUB-USERNAME" target="_blank">github.com/YOUR-GITHUB-USERNAME</a></p>
@@ -53,94 +115,6 @@
   <footer>
     <p>&copy; 2025 Bhargav | Made with ❤️</p>
   </footer>
+
 </body>
 </html>
-2️⃣ CSS (style.css)
-css
-Copy code
-body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
-  background: #f4f4f4;
-  color: #333;
-  line-height: 1.6;
-}
-
-header {
-  text-align: center;
-  background: #222;
-  color: white;
-  padding: 1.5rem 0;
-}
-
-h1 {
-  margin: 0;
-}
-
-section {
-  max-width: 800px;
-  margin: 20px auto;
-  background: white;
-  padding: 20px;
-  border-radius: 10px;
-  box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.1);
-}
-
-h2 {
-  color: #444;
-  border-bottom: 2px solid #ddd;
-  padding-bottom: 5px;
-  margin-bottom: 10px;
-}
-
-ul {
-  list-style-type: none;
-  padding: 0;
-}
-
-li {
-  margin-bottom: 10px;
-}
-
-a {
-  color: #0077cc;
-  text-decoration: none;
-}
-
-a:hover {
-  text-decoration: underline;
-}
-
-footer {
-  text-align: center;
-  margin-top: 20px;
-  padding: 10px;
-  background: #222;
-  color: white;
-}
-3️⃣ Steps to Host on GitHub Pages
-Create a new repository on GitHub (name it e.g. student-resume).
-
-Upload index.html and style.css into the repo.
-
-Go to Settings → Pages → Deploy from branch and select main branch and / (root) folder.
-
-GitHub will give you a public link like:
-
-lua
-Copy code
-https://your-username.github.io/student-resume/
-Share this link on your resume or LinkedIn.
-
-Would you like me to add dark mode toggle and downloadable PDF resume button to make it look more professional? (This will make your project stand out on GitHub!)
-
-
-
-
-
-
-
-
-Ask ChatGPT
-
