--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 <body>
 
   <header>
-    <h1>Bhargav</h1>
+    <h1>margi</h1>
     <p>Computer Science Student | Web Designer</p>
   </header>
 
@@ -107,13 +107,13 @@
 
   <section>
     <h2>Contact</h2>
-    <p>Email: <a href="mailto:bhargav@example.com">bhargav@example.com</a></p>
+    <p>Email: <a href="mailto:bhargav@example.com">margi@example.com</a></p>
     <p>GitHub: <a href="https://github.com/YOUR-GITHUB-USERNAME" target="_blank">github.com/YOUR-GITHUB-USERNAME</a></p>
     <p>LinkedIn: <a href="https://linkedin.com/in/YOUR-LINKEDIN" target="_blank">linkedin.com/in/YOUR-LINKEDIN</a></p>
   </section>
 
   <footer>
-    <p>&copy; 2025 Bhargav | Made with ❤️</p>
+    <p>&copy; 2025 margi| Made with ❤️</p>
   </footer>
 
 </body>
